v0.0.1/modules/schema/pages/class/ComFunction.adoc
= `ComFunction`
:toclevels: 4


+++Communication function of communication equipment or a device such as a meter.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:ComFunction`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetFunction.adoc[`AssetFunction`]
*** xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]
**** *`ComFunction`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
ComFunction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ComModule {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EndDevice {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Register {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




ComFunction -> ComModule: ComModule


ComFunction -> EndDevice: EndDevice


ComFunction -> Register: Registers


ComFunction -> Asset: Asset


ComFunction -> DiagramObject: DiagramObjects


ComFunction -> InstanceSet: InstanceSet


ComFunction -> Name: Names


ComFunction -> ChangeSetMember: PropertiesCIMDataObject


ComFunction -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<ComModule,`ComModule`>>
| 0..1
| xref::class/ComModule.adoc[`ComModule`]
| +++Module performing this communication function.+++

| <<amrAddress,`amrAddress`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Communication ID number (e.g. serial number, IP address, telephone number, etc.) of the AMR module which serves this meter.+++

| <<amrRouter,`amrRouter`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Communication ID number (e.g. port number, serial number, data collector ID, etc.) of the parent device associated to this AMR module.+++

| <<direction,`direction`>>
| 0..1
| xref::enumeration/ComDirectionKind.adoc[`ComDirectionKind`]
| +++Kind of communication direction.+++

| <<technology,`technology`>>
| 0..1
| xref::enumeration/ComTechnologyKind.adoc[`ComTechnologyKind`]
| +++Kind of communication technology.+++

| <<Asset,`Asset`>>
| 0..1
| xref::class/Asset.adoc[`Asset`]
| +++Asset on which this function can be performed.+++

| <<EndDevice,`EndDevice`>>
| 0..1
| xref::class/EndDevice.adoc[`EndDevice`]
| +++End device that performs this function.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<configID,`configID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Configuration specified for this function.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++True if the function is enabled.+++

| <<firmwareID,`firmwareID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Firmware version.+++

| <<hardwareID,`hardwareID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Hardware version.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<password,`password`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Password needed to access this function.+++

| <<programID,`programID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Name of program.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<Registers,`Registers`>>
| 0..*
| xref::class/Register.adoc[`Register`]
| +++All registers for quantities metered by this end device function.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#amrAddress]
=== `amrAddress`
+++Communication ID number (e.g. serial number, IP address, telephone number, etc.) of the AMR module which serves this meter.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ComFunction.amrAddress`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#amrRouter]
=== `amrRouter`
+++Communication ID number (e.g. port number, serial number, data collector ID, etc.) of the parent device associated to this AMR module.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ComFunction.amrRouter`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#Asset]
=== `Asset`
+++Asset on which this function can be performed.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.Asset`
| Cardinality
| 0..1
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#ComModule]
=== `ComModule`
+++Module performing this communication function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ComFunction.ComModule`
| Cardinality
| 0..1
| Type
| xref::class/ComModule.adoc[`ComModule`]


|===

//[discrete]
[#configID]
=== `configID`
+++Configuration specified for this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.configID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#direction]
=== `direction`
+++Kind of communication direction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ComFunction.direction`
| Cardinality
| 0..1
| Type
| xref::enumeration/ComDirectionKind.adoc[`ComDirectionKind`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++True if the function is enabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#EndDevice]
=== `EndDevice`
+++End device that performs this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.EndDevice`
| Cardinality
| 0..1
| Type
| xref::class/EndDevice.adoc[`EndDevice`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#firmwareID]
=== `firmwareID`
+++Firmware version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.firmwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#hardwareID]
=== `hardwareID`
+++Hardware version.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.hardwareID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#password]
=== `password`
+++Password needed to access this function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.password`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#programID]
=== `programID`
+++Name of program.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetFunction.programID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/AssetFunction.adoc[`AssetFunction`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Registers]
=== `Registers`
+++All registers for quantities metered by this end device function.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EndDeviceFunction.Registers`
| Cardinality
| 0..*
| Type
| xref::class/Register.adoc[`Register`]

| Inherited from
| xref::class/EndDeviceFunction.adoc[`EndDeviceFunction`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#technology]
=== `technology`
+++Kind of communication technology.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:ComFunction.technology`
| Cardinality
| 0..1
| Type
| xref::enumeration/ComTechnologyKind.adoc[`ComTechnologyKind`]


|===


